# scikit-ferm

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  skferm.data.html  skferm.datasets.html  skferm.growth_models.html  skferm.html  skferm.smoothing.html  usage.html  use-case-curve-smoothing.html  use-case-datasets.html  use-case-interpolation.html
.doctrees/: index.doctree  skferm.data.doctree  skferm.datasets.doctree  skferm.doctree  skferm.growth_models.doctree  skferm.smoothing.doctree  usage.doctree  use-case-curve-smoothing.doctree  use-case-datasets.doctree  use-case-interpolation.doctree
.github/worfklows/: sphinx.yml
.github/workflows/: pyright.yml  pytest.yml  release.yml  sphinx.yml
_modules/: index.html
_modules/skferm/: hello.html  smoothing.html
_sources/: index.rst.txt  skferm.data.rst.txt  skferm.rst.txt  skferm.smoothing.rst.txt  usage.rst.txt  use-case-curve-smoothing.rst.txt  use-case-interpolation.rst.txt
docs/: Makefile
docs/source/: api.rst  conf.py  index.rst  modules.rst  skferm.datasets.rst  skferm.growth_models.rst  skferm.interpolate.rst  skferm.plotting.rst  skferm.rst  skferm.smoothing.rst  usage.rst  use-case-datasets.rst  use-case-growth-modelling.rst
examples/: 01-curve-smoothing.py  example1.py
notebooks/: 01_datasets.ipynb  02_curve_smoothing.ipynb
skferm/: __init__.py  hello.py
tests/: test_datasets_rheolaser.py  test_datasets_synthetic.py  test_gompertz.py
(+36 files in other folders)
