[project]
name = "scikit-ferm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
docs = [
    "pydata-sphinx-theme>=0.16.1",
    "sphinx>=8.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["skferm"]

[tool.hatch.build.targets.wheel]
packages = ["skferm"]
